--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-target/
-
 # START Jetbrains.gitignore
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -75,3 +73,19 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # END Jetbrains.gitignore
+
+# START Maven.gitignore
+
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
+
+# END Maven.gitignore
